--- a/careerbytecode/package.json
+++ b/careerbytecode/package.json
@@ -18,6 +18,7 @@
     "flowbite": "^3.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
